@@ -1,5 +1,9 @@
 For 1.21.2-2
-	- Linux: font directory fixed.
+	- Linux: font directory fixed. OSX uses "INSTALLDIR" unless override by FREEWRL_FONTSDIR 
+	  environment variable.
+
+	- Classic, PROTO expansion; some frees were not in correct place in code, leading to memory
+	  leaks.
 
 For 1.21.1 and  1.21.2
 	- Linux - verify html browser plugin mime types, added model/x3d.
